--- a/src/components/GardenPot/GardenPot.module.scss
+++ b/src/components/GardenPot/GardenPot.module.scss
@@ -9,8 +9,8 @@
 
 
 .container {
-  padding: 20px;
-  background-color: black;
+  padding: 6px 6px;
+  // background-color: black;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   text-align: center;
@@ -25,26 +25,128 @@ h2 {
   margin-bottom: 20px;
 }
 
-.sliders {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin-bottom: 20px;
-}
+// .presetButtonContainer {
+//   display: flex;
+//   justify-content: center;
+//   gap: 10px;
+//   margin-bottom: 20px;
+// }
 
-.sliders div {
-  display: flex;
-  flex-direction: column;
-}
+// .presetButton {
+//   padding: 10px 20px;
+//   border-radius: 5px;
+//   cursor: pointer;
+//   transition: background-color 0.3s, transform 0.3s;
+//   text-align: center;
+//   font-size: 16px;
+//   font-weight: bold;
+// }
 
-label {
-  font-size: 16px;
-  margin-bottom: 5px;
-}
+// .presetButton.default {
+//   background-color: grey;
+//   color: white;
+// }
 
-input[type="range"] {
-  width: 100%;
-}
+// .presetButton.pepper {
+//   background-color: red;
+//   color: white;
+// }
+
+// .presetButton:hover {
+//   transform: scale(1.05);
+// }
+
+// .presetButton:active {
+//   transform: scale(0.95);
+// }
+
+// .sliders {
+//   display: flex;
+//   flex-direction: column;
+//   gap: 10px;
+//   margin-bottom: 20px;
+// }
+
+// .sliders div {
+//   display: flex;
+//   flex-direction: column;
+// }
+
+// label {
+//   font-size: 16px;
+//   margin-bottom: 5px;
+// }
+
+// input[type="range"] {
+//   width: 100%;
+// }
+// input[type="range"] {
+//   -webkit-appearance: none; 
+//   appearance: none;
+//   width: 100%;
+//   height: 8px; 
+//   background: #ddd; 
+//   border-radius: 5px; 
+//   outline: none; 
+//   opacity: 0.7; 
+//   transition: opacity 0.2s;
+// }
+
+// input[type="range"]:hover {
+//   opacity: 1; 
+// }
+
+// input[type="range"]::-webkit-slider-thumb {
+//   -webkit-appearance: none; 
+//   appearance: none;
+//   width: 25px; 
+//   height: 25px; 
+//   background: url('/res/dirt-svgrepo-com.svg') no-repeat center center;
+//   background-size: contain; 
+//   cursor: pointer; 
+// }
+
+// input[type="range"]::-moz-range-thumb {
+//   width: 25px; 
+//   height: 25px; 
+//   background: url('/res/dirt-svgrepo-com.svg') no-repeat center center; 
+//   background-size: contain; 
+//   cursor: pointer;
+// }
+
+// input[type="range"]::-ms-thumb {
+//   width: 25px; 
+//   height: 25px; 
+//   background: url('/res/dirt-svgrepo-com.svg') no-repeat center center; 
+//   background-size: contain; 
+//   cursor: pointer; 
+// }
+
+// input[type="range"]::-webkit-slider-runnable-track {
+//   width: 100%;
+//   height: 8px;
+//   cursor: pointer;
+//   background: #ddd;
+//   border-radius: 5px;
+// }
+
+// input[type="range"]::-moz-range-track {
+//   width: 100%;
+//   height: 8px;
+//   cursor: pointer;
+//   background: #ddd;
+//   border-radius: 5px;
+// }
+
+// input[type="range"]::-ms-track {
+//   width: 100%;
+//   height: 8px;
+//   cursor: pointer;
+//   background: #ddd;
+//   border-radius: 5px;
+//   border-color: transparent;
+//   color: transparent;
+// }
 
 .soilLayer {
   position: absolute;
