Added some padding and icons to the theme switcher. Added a grid and styled the searchbar in the saved tab.

--- a/src/App.css
+++ b/src/App.css
@@ -93,3 +93,15 @@ body, html {
 .grid-header {
   font-weight: bold;
 }
+
+.themeIcon {
+  width: 1em;
+  height: 1em;
+  display: inline-block;
+  line-height: 1em;
+  -webkit-flex-shrink: 0;
+  -ms-flex-negative: 0;
+  flex-shrink: 0;
+  color: currentColor;
+  vertical-align: middle;
+}
