--- a/src/global.css
+++ b/src/global.css
@@ -31,7 +31,7 @@ body {
     place-items: center;
     min-width: 320px;
     min-height: 100vh;
-    background-color: var(--background-color);
+    /* background-color: var(--background-color); */
     color: var(--text-color);
 }
 
